<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">设备点检</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_code">扫一扫</string>
    
    <string name="hink_user_id">帐号</string>
    <string name="hink_password">密码</string>
    
    <string name="my_name">张远平</string>
    <string name="personal_profile">个人资料</string>
    <string name="swich_account">切换帐号</string>
    
    <string name="name_label">工人姓名：</string>
    <string name="info_label">职称：</string>
    <string name="label_belong">所属部门：</string>
    <string name="label_gender">工人性别：</string>
    <string name="person_position">点检部高级点检组长</string>

    <string name="btn_check">确认点检</string>
    
    <string name="label_contact">联系人</string>
    
</resources>
