<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <RelativeLayout
        android:id="@+id/layout_base_info"
        android:layout_width="fill_parent"
        android:layout_height="125dip"
        android:background="@drawable/profile_background">
	

       <com.meg7.widget.CustomShapeImageView
            android:id="@+id/img_person"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="60dp"
	        android:scaleType="centerCrop"
	        android:src="@drawable/head_profile"
	        app:shape="circle" />

	    <TextView
	        android:id="@+id/tv_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/img_person"
	        android:textSize="20sp"
	        android:textColor="@color/black"
	        android:layout_marginTop="30dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/my_name" />
	    
	    <TextView
	        android:id="@+id/tv_profile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tv_name"
	        android:layout_toRightOf="@id/img_person"
	        android:textColor="@color/orange"
	        android:textSize="16sp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/personal_profile" />
	    
	    <TextView
	        android:id="@+id/tv_line"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tv_name"
	        android:layout_toRightOf="@id/tv_profile"
	        android:textSize="16sp"
	        android:textColor="@color/Grey"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:text="|" />

	    <TextView
	        android:id="@+id/tv_account"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tv_name"
	        android:layout_toRightOf="@id/tv_line"
	        android:textColor="@color/orange"
	        android:textSize="16sp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/swich_account" />
	    
        
    </RelativeLayout>
    
    <View
      android:layout_below="@+id/layout_base_info"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="#FF909090" />
    
    <LinearLayout 
        android:layout_marginTop="2dp"
        android:id="@+id/button_layout"
        android:layout_below="@+id/layout_base_info"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btn_scan_code"
			android:layout_height="fill_parent" 
			android:layout_width="fill_parent" 
			android:background="@drawable/scan_button"
			android:text="@string/scan_code"
			android:gravity="bottom"
			android:layout_weight="1"/> 
		<Button 
		    android:id="@+id/btn_news"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent" 
			android:background="@drawable/news_button"
			android:gravity="bottom"
			android:text="消 息"
			android:layout_weight="1"/> 
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/button_layout2"
        android:layout_below="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btn_contact"
			android:layout_height="fill_parent" 
			android:layout_width="fill_parent" 
			android:background="@drawable/contact_button"
			android:gravity="bottom"
			android:text="联系人"
			android:layout_weight="1"/> 
		<Button 
		    android:id="@+id/btn_data"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent" 
			android:background="@drawable/data_button"
			android:gravity="bottom"
			android:text="统 计"
			android:layout_weight="1"/> 
        
    </LinearLayout>

   <!--  <Button
        android:id="@+id/btn_scan_code"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/selector_scan_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/scan_code" /> -->

</RelativeLayout>